public class ARM implements GPU {
	public String toString() {
		return "ARM-based graphics processing unit";
	}
	
	@Override
	public String getType() {
		return "ARM";
	}
	
	@Override
	public String getDescription() {
		return "ARM-based graphics processing unit";
	}
}
