public class CRT implements Display {
	public String toString() {
		return "Old School CRT";
	}
	
	@Override
	public String getType() {
		return "CRT";
	}
	
	@Override
	public String getDescription() {
		return "Cathode ray tube display";
	}
}
