public class Linux implements OS {
	public String toString() {
		return "Linux operating system";
	}
	
	@Override
	public String getType() {
		return "Linux";
	}
	
	@Override
	public String getDescription() {
		return "Linux operating system";
	}
}
