public interface Payment {
	public String getType();
	public String getDescription();
	public String toString();
}
