public class Reels implements Display {
	public String toString() {
		return "Old School Reels";
	}
	
	@Override
	public String getType() {
		return "reels";
	}
	
	@Override
	public String getDescription() {
		return "Traditional mechanical reels display";
	}
}
