public class X77 implements GPU {
	public String toString() {
		return "X77-based graphics processing unit";
	}
	
	@Override
	public String getType() {
		return "X77";
	}
	
	@Override
	public String getDescription() {
		return "X77-based graphics processing unit";
	}
}
